--- a/45GAMES4U_Server.csproj
+++ b/45GAMES4U_Server.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Presentacion\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentacion\TiendaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\TiendaForm.Designer.cs">
+      <DependentUpon>TiendaForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentacion\TipoVideojuegoForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\TiendaForm.resx">
+      <DependentUpon>TiendaForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\TipoVideojuegoForm.resx">
       <DependentUpon>TipoVideojuegoForm.cs</DependentUpon>
