--- a/45GAMES4U_Server.csproj
+++ b/45GAMES4U_Server.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos\AccesoDatos.cs" />
+    <Compile Include="Cliente.cs" />
     <Compile Include="Presentacion\AdministradorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,12 +110,6 @@
     <Compile Include="Presentacion\FormInventario.Designer.cs">
       <DependentUpon>FormInventario.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentacion\frmPrincipalServidor.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Presentacion\frmPrincipalServidor.Designer.cs">
-      <DependentUpon>frmPrincipalServidor.cs</DependentUpon>
-    </Compile>
     <Compile Include="Presentacion\TiendaForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,9 +130,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServicioClientes.cs" />
-    <Compile Include="ServicioReservas.cs" />
-    <Compile Include="ServidorTCP.cs" />
+    <Compile Include="ServidorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ServidorForm.Designer.cs">
+      <DependentUpon>ServidorForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Presentacion\AdministradorForm.resx">
       <DependentUpon>AdministradorForm.cs</DependentUpon>
     </EmbeddedResource>
