Mas cambios en el ServerTCP

--- a/45GAMES4U_Server.csproj
+++ b/45GAMES4U_Server.csproj
@@ -85,7 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos\AccesoDatos.cs" />
-    <Compile Include="Cliente.cs" />
+    <Compile Include="EntidadesUnicas\Cliente.cs" />
     <Compile Include="Presentacion\AdministradorForm.cs">
       <SubType>Form</SubType>
     </Compile>
