--- a/45GAMES4U_Server.csproj
+++ b/45GAMES4U_Server.csproj
@@ -98,17 +98,17 @@
     <Compile Include="Presentacion\ClienteForm.Designer.cs">
       <DependentUpon>ClienteForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentacion\Form1.cs">
+    <Compile Include="Presentacion\FormPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Presentacion\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Presentacion\FormPrincipal.Designer.cs">
+      <DependentUpon>FormPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="Presentacion\FormInventario.cs">
+    <Compile Include="Presentacion\InventarioForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Presentacion\FormInventario.Designer.cs">
-      <DependentUpon>FormInventario.cs</DependentUpon>
+    <Compile Include="Presentacion\InventarioForm.Designer.cs">
+      <DependentUpon>InventarioForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Presentacion\TiendaForm.cs">
       <SubType>Form</SubType>
@@ -130,10 +130,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServidorForm.cs">
+    <Compile Include="ServidorTCP\ServidorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ServidorForm.Designer.cs">
+    <Compile Include="ServidorTCP\ServidorForm.Designer.cs">
       <DependentUpon>ServidorForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Presentacion\AdministradorForm.resx">
@@ -142,11 +142,11 @@
     <EmbeddedResource Include="Presentacion\ClienteForm.resx">
       <DependentUpon>ClienteForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Presentacion\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Presentacion\FormPrincipal.resx">
+      <DependentUpon>FormPrincipal.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Presentacion\FormInventario.resx">
-      <DependentUpon>FormInventario.cs</DependentUpon>
+    <EmbeddedResource Include="Presentacion\InventarioForm.resx">
+      <DependentUpon>InventarioForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\TiendaForm.resx">
       <DependentUpon>TiendaForm.cs</DependentUpon>
@@ -166,6 +166,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ServidorTCP\ServidorForm.resx">
+      <DependentUpon>ServidorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
